Fixing tiny bugs. Removing Bio from regular posts and fixing code block line spacing.

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,7 +88,7 @@
 	}
 
 	.prose pre {
-		@apply overflow-x-auto rounded-lg bg-accent px-5 py-4 text-sm/[10px];
+		@apply overflow-x-auto rounded-lg bg-accent px-5 py-4 text-sm;
 	}
 
 	.prose code {
